--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <script src="app.js"></script>
   
   <body>
-    hello
-    <div id="tx">
+    <div id="locations">
     </div>
   </body>
 </html>
