--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <!--<div id="locations">
         </div>-->
         <div id="map" style="width: 600px; height: 400px"></div>
+        <div id="filters">
+            <h3>Filters</h3>
+            <input id="tor-filter" type="checkbox" name="tor-filter" value="tor"/> Hide Tor transactions
         <script>
             $(function () {
                 document.getElementById("map").setAttribute("style", "width:" + screen.width + "px");
