tor only totals

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div id="Stats for this session">
             <h3>Stats</h3>
             <p id="total"></p>
+            <p id="tor_total"></p>
         </div>
         <script>
             $(function () {
