Added heatmap, Tor percentage stat.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <h3>Stats</h3>
             <p id="total"></p>
             <p id="tor_total"></p>
+            <p id="tor_perc"></p>
         </div>
     </body>
 </html>
