--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
             <p id="tor_total"></p>
             <p id="unknown_total"></p>
             <p id="tor_perc"></p>
+            <h2>Top 10 Countries</h2>
+            <p id="0"></p>
+            <p id="1"></p>
+            <p id="2"></p>
+            <p id="3"></p>
+            <p id="4"></p>
+            <p id="5"></p>
+            <p id="6"></p>
+            <p id="7"></p>
+            <p id="8"></p>
+            <p id="9"></p>
+            
         </div>
     </body>
 </html>
