--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <div id="map" style="width: 600px; height: 400px"></div>
         <div id="filters">
             <h3>Filters</h3>
-            <input id="tor-filter" type="checkbox" name="tor-filter" value="tor"/> Hide Tor transactions
+            <input id="tor-filter" type="checkbox" name="tor-filter" value="tor"/> Hide Tor nodes <br> <br> Filter transactions below 
+            <input id="value-filter" type="text" name="value-filter" value="0.05" size="1"/> BTC
         </div>
         <br>
         <div id="Stats for this session">
